Loaded data for Lan. Sector

--- a/app/src/main/res/layout/activity_lander2.xml
+++ b/app/src/main/res/layout/activity_lander2.xml
@@ -2,17 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rv_images"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity2">
+    tools:context=".ActivityLander">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -33,7 +32,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <Button
-                android:id="@+id/rv_web"
+                android:id="@+id/ld_web"
                 android:layout_width="185dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -43,36 +42,33 @@
                 app:layout_constraintTop_toBottomOf="@+id/ld_spec_image" />
 
             <Button
-                android:id="@+id/rv_location"
+                android:id="@+id/ld_location"
                 android:layout_width="185dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="traverse map"
-                app:layout_constraintBottom_toTopOf="@+id/rv_web"
+                app:layout_constraintBottom_toTopOf="@+id/ld_web"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <Button
-                android:id="@+id/rv_doc"
+                android:id="@+id/ld_doc"
                 android:layout_width="185dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="PRess Kit"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_web" />
+                app:layout_constraintTop_toBottomOf="@+id/ld_web" />
 
             <Button
-                android:id="@+id/rv_imagesFunction"
+                android:id="@+id/ld_imagesFunction"
                 android:layout_width="185dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="16dp"
                 android:text="IMAGES"
-                app:layout_constraintBottom_toBottomOf="@+id/rv_location"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/rv_location" />
+                app:layout_constraintStart_toEndOf="@+id/ld_location"
+                app:layout_constraintTop_toTopOf="@+id/ld_location" />
 
             <TextView
                 android:id="@+id/ld_name2"
@@ -92,7 +88,7 @@
             <ImageView
                 android:id="@+id/ld_em"
                 android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_height="135dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ld_spec_image"
                 app:layout_constraintTop_toTopOf="@+id/ld_spec_image"
