--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,10 @@
 
     <ImageView
         android:id="@+id/RoverImage"
-        android:layout_width="177dp"
-        android:layout_height="118dp"
+        android:layout_width="163dp"
+        android:layout_height="116dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@mipmap/mars_rover" />
@@ -31,33 +31,34 @@
         style="@style/Widget.AppCompat.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="32dp"
         android:text="ROVERS"
         android:textColor="#D5481C"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/rv_utc"
-        app:layout_constraintTop_toBottomOf="@+id/rv_utc" />
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toStartOf="@+id/RoverImage"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/rv_mars_live"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_width="70dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="#D5481C"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/RoverImage" />
+        app:layout_constraintStart_toStartOf="@+id/rv_utc"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="MTC:"
+        android:layout_marginStart="8dp"
+        android:text="Mars coordinated Time:"
         android:textColor="#D5481C"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rv_mars_live" />
@@ -66,25 +67,38 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="UTC:"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Coordinated universal Time:"
         android:textColor="#D5481C"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/rv_utc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="70dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="1dp"
         android:text="TextView"
         android:textColor="#D5481C"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/rv_mars_live"
-        app:layout_constraintTop_toBottomOf="@+id/rv_mars_live" />
+        app:layout_constraintEnd_toStartOf="@+id/RoverImage"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="409dp"
+        android:layout_height="3dp"
+        android:background="?android:attr/listDivider"
+        android:foregroundTint="#FF5722"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RoverImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
