--- a/app/src/main/res/layout/activity_satellite2.xml
+++ b/app/src/main/res/layout/activity_satellite2.xml
@@ -31,12 +31,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="SATELLITES"
-        android:textSize="22sp"
         android:textColor="#D5481C"
+        android:textSize="22sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewSat"
         app:layout_constraintEnd_toStartOf="@+id/SatellitesImage"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/st_utcText" />
 
     <TextView
         android:id="@+id/st_mtcText"
